# crashes-web

./: README.md  pyproject.toml
deploy/k8s/: 10-crashes-web.yaml  20-crashes-data.yaml
src/crashesweb/: db.py  ingest.py  server.py  socrata.py  ui.py
src/crashesweb/static/: app.css
