[project]
name = "crashesweb"
version = "0.1.0"
description = "NYC traffic-crash dashboard (live NYC Open Data passthrough — no DB)"
requires-python = ">=3.12"
dependencies = [
    "starlette>=0.37",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "psycopg2-binary>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crashesweb"]
